# chiplandscape

./: .gitignore  AnalyzingLlamaPolice.ipynb  JupyterAIEtude.ipynb  LICENSE  OllamaSanityCheck.ipynb  README.md  Untitled.ipynb  llama_police_dump_2024-05-06.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_output_wip.yaml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
js/: widget.css  widget.tsx
src/chiplandscape/: __init__.py
